syntax = "proto3";

package product;

option csharp_namespace = "ApiGateway.ProductProtoService";

service ProductGrpc {
  rpc CreateProduct (ItemProto) returns (ItemProto);
  rpc GetProduct (SingleProduct) returns (ItemProto);
  rpc UpdateProduct (ItemProto) returns (ItemProto);
  rpc UpdateStock (UpdateStockProto) returns (ItemProto);
  rpc DeleteProduct (SingleProduct) returns (ItemProto);
  rpc GetAllPaginatedProducts (ProductPaginatedRequest) returns (ItemsPaginatedProto);
  rpc GetAllProducts (EmptyRequest) returns (ItemsProto);
  rpc GetAllCategories (EmptyRequest) returns (CategoriesProto);
}

message EmptyRequest {
}

message ItemsPaginatedProto {
	ItemsProto items = 1;
	int32 total_pages = 2;
	int32 current_page = 3;
	int32 total_items = 4;
}

message ProductPaginatedRequest {
	int32 offset = 1;
	int32 limit = 2;
}

message ItemsProto {
	repeated ItemProto items = 1;
}

message ItemProto {
  int32 id = 1;
  string name = 2;
  string description = 3;
  int32 category_id = 4;
  string image = 5;
  double price = 6;
  int32 stock = 7;
  bool is_active = 8;
  CategoryProto category = 9;
  int32 oldStock = 10;
}

message UpdateStockProto {
  int32 id = 1;
  int32 quantity = 2;
  string movementType = 3;
}

message CategoryProto {
  int32 id = 1;
  string name = 2;
}

message SingleProduct {
  int32 id = 1;
}

message CategoriesProto {
	repeated CategoryProto categories = 1;
}
